# nba_intelligence

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  requirements.txt
airflow/: .env.template  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
dags/: ingest_nba_raw.py
data/: basketball-reference.ipynb  nba_api.ipynb
data/scrapers/: hoopshype_salaries.py  salaryswish.py
dbt/: dbt_project.yml  profiles.yml.sample
